trying to fix footer covering the list

--- a/app/assets/stylesheets/rsvps.scss
+++ b/app/assets/stylesheets/rsvps.scss
@@ -32,6 +32,14 @@
   margin-bottom: 54px;
 }
 
+.site:last-child {
+  margin-bottom: 54px;
+}
+
+.event:last-child {
+  margin-bottom: 54px;
+}
+
 .rsvp, .site, .choose_site, .choose_event, .event {
   width: 90%;
   height: 63px;
